--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -4,7 +4,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerorderservice?useUnicode=tr
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.datasource.hikari.maximum-pool-size=5
+
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
 spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
 spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
@@ -15,6 +17,10 @@ spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
 spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
 spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
 spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+
+#disable service discovery
+spring.cloud.discovery.enabled=false
+
 # Enable logging for config troubleshooting
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
