fixes and docker config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.artemis.password=simetraehcapa
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+
+# Spring Data hangs when not sen under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
